updated styling to fix alignment of buttons

--- a/src/new/new.css
+++ b/src/new/new.css
@@ -1,50 +1,56 @@
 #page-title {
-    margin-top: 1.5em;
-    margin-bottom: 1.5em;
-    flex: 0 35px;
+  margin-top: 1.5em;
+  margin-bottom: 1.5em;
+  flex: 0 35px;
 }
 
 form {
-    padding: 1.0em;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
+  padding: 1em;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
 }
 
 #new-recipe {
-    flex: 4;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
+  flex: 4;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
 }
 
 #new-recipe > div {
-    flex: 1;
-    align-items: start;
-    justify-content: space-around;
-    
+  flex: 1;
+  align-items: start;
+  justify-content: space-around;
 }
 
 input {
-    padding: 1.0em;
-    width: 100%;
+  padding: 1em;
+  width: 100%;
 }
 
 textarea {
-    padding: 1.0em;
-    width: 100%;
-    resize: none;
+  padding: 1em;
+  width: 100%;
+  resize: none;
 }
 
 label {
-    width: 100%;
+  width: 100%;
 }
 
 #new-recipe-buttons {
-    padding: 0 35vw;
-    align-self: center;
-    align-items: center;
-    width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-self: center;
+  align-items: center;
+  width: 35%;
+}
+
+#new-recipe-buttons > button {
+  flex: 1;
+  align-self: center;
+  align-items: center;
 }
